--- a/src/component/DisplayInfor.scss
+++ b/src/component/DisplayInfor.scss
@@ -18,3 +18,11 @@
         height: 300px;
     }
 }
+
+.showhidelistusers {
+    .item-showhidelistusers {
+        text-decoration: underline;
+        color: rgb(59, 144, 236);
+        cursor: pointer;
+    }
+}
