--- a/src/component/Admin/Admin.scss
+++ b/src/component/Admin/Admin.scss
@@ -16,9 +16,7 @@
             border: 1px solid rgb(4, 128, 0);
         }
 
-        .admin-main {
-            border: 1px solid blue;
-        }
+        .admin-main {}
     }
 
 
