--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,17 @@ body {
 
 .app-container {
   .header-container {
+    margin: 20px 40px;
+    align-items: center;
 
+    .navbar-brand {
+      font-size: 25px;
+
+      .brand {
+        position: relative;
+        bottom: 3px;
+      }
+    }
 
 
     .btn-login {
@@ -49,8 +59,11 @@ body {
       padding: 20px;
       z-index: 10;
       background-color: rgba(0, 0, 0, 0) !important;
+      margin: 22px;
 
       .nav-link {
+        font-size: 17px;
+
         &.active {
           color: red;
         }
