--- a/src/component/User/DetailQuiz.scss
+++ b/src/component/User/DetailQuiz.scss
@@ -9,22 +9,42 @@
     }
 
     .left-content {
-        border: 1px solid red;
+        border: 2px solid #ccc;
         width: 70%;
+        border-radius: 5px;
+        padding: 20px;
+
 
         .content-quiz {
+
+            .answers {
+                margin: 20px 50px;
+                text-align: left;
+            }
+
             .question {
                 font-size: 20px;
                 font-weight: 600;
+                display: flex;
+                justify-content: center;
+                margin-top: 20px;
+            }
+
+            .body-quiz {
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                height: 100px;
+                margin-top: 50px;
+
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                }
             }
         }
 
-        .body-quiz {
-            img {
-                width: 300px;
-                height: 200px;
-            }
-        }
+
 
         .footer-quiz {
             display: flex;
