--- a/src/component/Admin/Admin.scss
+++ b/src/component/Admin/Admin.scss
@@ -11,12 +11,16 @@
     .admin-content {
         width: 100%;
 
+
         .admin-header {
             height: 40px;
             border: 1px solid rgb(4, 128, 0);
         }
 
-        .admin-main {}
+        .admin-main {
+            height: calc(100vh - 40px);
+
+        }
     }
 
 
