--- a/src/App.scss
+++ b/src/App.scss
@@ -73,6 +73,10 @@ body {
     }
   }
 
+  .app-content {
+    height: calc(100vh - 200px);
+  }
+
   .homepage-container {
     .homepage-content {
       position: relative;
