--- a/src/component/User/DetailQuiz.scss
+++ b/src/component/User/DetailQuiz.scss
@@ -40,6 +40,7 @@
                 img {
                     max-width: 100%;
                     max-height: 100%;
+                    cursor: pointer;
                 }
             }
         }
@@ -57,5 +58,44 @@
     .right-content {
         border: 1px solid green;
         width: 30%;
+        padding: 20px;
+
+        .main-timer {
+            padding: 16px;
+            font-size: 20px;
+            font-weight: 600;
+            border-bottom: 1px solid #d0d0d0;
+            text-align: center;
+        }
+
+        .question-items {
+            display: flex;
+            gap: 15px;
+            margin-top: 10px;
+            flex-wrap: wrap;
+
+            .Question {
+                display: flex;
+                border: 1px solid rgb(148, 146, 146);
+                height: 40px;
+                width: 40px;
+                border-radius: 50%;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+
+                &:hover {
+                    color: red;
+                }
+
+                &.selected {
+                    background-color: #00ff6f;
+                }
+
+                &.clicked {
+                    color: rgb(247, 11, 11);
+                }
+            }
+        }
     }
 }
