--- a/src/component/Auth/Login.scss
+++ b/src/component/Auth/Login.scss
@@ -1,6 +1,9 @@
 .login-content {
     .header {
-        text-align: right;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 10px;
         padding: 10px 70px 0 70px;
         font-size: 14px;
 
