--- a/src/component/Auth/Register.scss
+++ b/src/component/Auth/Register.scss
@@ -1,14 +1,17 @@
 .register-content {
     .header {
-        text-align: right;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 10px;
         padding: 10px 70px 0 70px;
         font-size: 14px;
 
         button {
-            padding: 5px 15px;
+            padding: 3px 10px;
             border: 1px solid #000;
             background-color: white;
-            font-size: 15px;
+            font-size: 12px;
             margin-left: 5px;
             border-radius: 5px;
 
