--- a/src/component/Admin/Admin.scss
+++ b/src/component/Admin/Admin.scss
@@ -13,8 +13,23 @@
 
 
         .admin-header {
-            height: 40px;
-            border: 1px solid rgb(4, 128, 0);
+            height: 60px;
+            border-bottom: 1px solid rgb(4, 128, 0);
+            display: flex;
+            justify-content: space-between;
+            padding: 0 20px 0 10px;
+            align-items: center;
+
+            .leftside {
+                font-size: 20px;
+                color: #665571;
+                cursor: pointer;
+            }
+
+            .rightside {
+                display: flex;
+                gap: 15px;
+            }
         }
 
         .admin-main {
