--- a/src/component/Admin/Content/ManageUser.scss
+++ b/src/component/Admin/Content/ManageUser.scss
@@ -26,6 +26,14 @@
             max-width: 100%;
             max-height: 100%;
         }
+
+
+    }
+
+    .btn-items-update {
+        display: flex;
+        align-items: baseline;
+        justify-content: space-between;
     }
 
     .label-upload {
