--- a/src/component/Admin/Content/DashBoard.scss
+++ b/src/component/Admin/Content/DashBoard.scss
@@ -7,21 +7,30 @@
     }
 
     .main-content {
+        margin-top: 15px;
         display: flex;
+        gap: 20px;
 
         .left-content {
             width: 50%;
-            border: 1px solid;
             display: flex;
             flex-wrap: wrap;
+            gap: 20px;
 
             .child {
                 display: flex;
-                width: 50%;
+                width: calc(50% - 10px);
                 justify-content: center;
                 border: 1px solid;
                 height: 150px;
                 padding: 10px;
+                border-radius: 10px;
+                flex-direction: column;
+                align-items: center;
+
+                .numtext {
+                    font-size: 25px;
+                }
             }
         }
 
