--- a/src/component/User/DetailQuiz.scss
+++ b/src/component/User/DetailQuiz.scss
@@ -20,7 +20,26 @@
             .answers {
                 margin: 20px 50px;
                 text-align: left;
+
+                .a-child {
+
+                    .form-check {
+
+                        .incorrect-icon {
+                            color: red;
+                            margin-left: 10px;
+                            font-size: 20px;
+                        }
+
+                        .correct-icon {
+                            color: green;
+                            margin-left: 10px;
+                            font-size: 20px;
+                        }
+                    }
+                }
             }
+
 
             .question {
                 font-size: 20px;
@@ -97,5 +116,13 @@
                 }
             }
         }
+    }
+}
+
+.detail-quiz-header {
+    margin: 60px 0px 0px 50px;
+
+    a {
+        text-decoration: none !important;
     }
 }
